Fixed forms and templates for HSM setup and backup password

--- a/trustpoint/templates/setup_wizard/backup_password.html
+++ b/trustpoint/templates/setup_wizard/backup_password.html
@@ -44,17 +44,12 @@
                     {{ form|crispy }}
                 </fieldset>
 
-                <div class="card bg-light">
-                    <div class="card-header">
-                        <h6 class="mb-0">{% trans "Password Requirements" %}</h6>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-unstyled mb-0 text-start">
-                            <li><i class="fas fa-check text-success me-2"></i>{% trans "At least 8 characters long" %}</li>
-                            <li><i class="fas fa-check text-success me-2"></i>{% trans "Contains both letters and numbers" %}</li>
-                            <li><i class="fas fa-check text-success me-2"></i>{% trans "Not a commonly used password" %}</li>
-                        </ul>
-                    </div>
+                <div id="id_password1_helptext" class="form-text">
+                    <ul>
+                        {% for requirement in password_requirements %}
+                            <li>{{ requirement }}</li>
+                        {% endfor %}
+                    </ul>
                 </div>
 
                 <hr>
