--- a/trustpoint/templates/workflows/definition_wizard.html
+++ b/trustpoint/templates/workflows/definition_wizard.html
@@ -15,7 +15,7 @@
             <input type="text" id="wf-name" class="form-control" placeholder="Workflow name">
           </div>
           <div class="mb-3">
-            <label for="trigger-handler" class="form-label">Event Type</label>
+            <label for="trigger-handler" class="form-label">Trigger Type</label>
             <select id="trigger-handler" class="form-select"></select>
           </div>
           <div class="row g-2">
