Finalize integration and cleanup

--- a/trustpoint/templates/workflows/definition_wizard.html
+++ b/trustpoint/templates/workflows/definition_wizard.html
@@ -15,17 +15,17 @@
             <input type="text" id="wf-name" class="form-control" placeholder="Workflow name">
           </div>
           <div class="mb-3">
-            <label for="trigger-handler" class="form-label">Trigger Type</label>
-            <select id="trigger-handler" class="form-select"></select>
+            <label for="event-handler" class="form-label">Event Type</label>
+            <select id="event-handler" class="form-select"></select>
           </div>
           <div class="row g-2">
             <div class="col" id="proto-container">
-              <label for="trigger-protocol" class="form-label">Protocol</label>
-              <select id="trigger-protocol" class="form-select"></select>
+              <label for="event-protocol" class="form-label">Protocol</label>
+              <select id="event-protocol" class="form-select"></select>
             </div>
             <div class="col" id="op-container">
-              <label for="trigger-operation" class="form-label">Operation</label>
-              <select id="trigger-operation" class="form-select"></select>
+              <label for="event-operation" class="form-label">Operation</label>
+              <select id="event-operation" class="form-select"></select>
             </div>
           </div>
         </div>
