--- a/trustpoint/templates/pki/domains/config.html
+++ b/trustpoint/templates/pki/domains/config.html
@@ -84,7 +84,7 @@
                         </div>
                     </div>
 
-                    <h2 class="mt-5">{% trans 'DevID Registration Patterns' %}</h2>
+                    <h2 class="mt-3">{% trans 'DevID Registration Patterns' %}</h2>
                     <hr class="hr-m">
                     <a href="{% url 'pki:devid_registration-method_select' pk=domain.id %}"
                        class="btn btn-primary tp-table-btn min-width-20">
@@ -92,6 +92,12 @@
                     </a>
 
                     {% include 'pki/devid_registration/table.html' %}
+
+                    <h2 class="mt-3">{% trans 'Allowed Certificate Profiles' %}</h2>
+                    <hr class="hr-m">
+                    <div class="mb-3">
+                    {% include 'pki/cert_profiles/domain_table.html' %}
+                    </div>
                 </div>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
